Submission for week 4 project
